Fixing issue with header heroimage spacing,

--- a/wp-content/themes/skyranch_v1.5/assets/scss/main.scss
+++ b/wp-content/themes/skyranch_v1.5/assets/scss/main.scss
@@ -61,8 +61,9 @@ header { width: 100%; position: relative; z-index: 99; left: 0; top: 0;
       .hero-logo { top: 80px; right: 30; width: 400px; }
     }
   }
+  section.heroimage { top: 0; }
   .homepage-content { padding: 3vh 0; }
-  .page-breadcrumbs { margin-top: 150px; }
+  .page-breadcrumbs { margin-top: 10px; }
 }
 
 
